apps/base/riven/riven-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: riven-frontend
  namespace: riven
  labels:
    app: riven
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: riven
      component: frontend
  template:
    metadata:
      labels:
        app: riven
        component: frontend
        app.kubernetes.io/name: riven       
    spec:
      containers:
      - name: riven-frontend
        image: spoked/riven-frontend@sha256:311a1ad122b00c76136b44e41bca8e9a2a13edfdd491413bf881c8601f14e8f9
        ports:
        - containerPort: 3000
      restartPolicy: Always
