apps/base/riven/riven-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: riven-postgres
  namespace: riven
  labels:
    app: riven
    component: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: riven
      component: postgres
  template:
    metadata:
      labels:
        app: riven
        component: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:17.4-alpine3.20
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data/pgdata
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "postgres"]
          initialDelaySeconds: 10
          periodSeconds: 5
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: riven-postgres-pvc
