apps/base/riven/riven-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: riven-frontend-service
  namespace: riven
  labels:
    app: riven
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: riven
    component: frontend
