apps/base/riven/riven-postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: riven-postgres-service
  namespace: riven
  labels:
    app: riven
    component: postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: riven
    component: postgres
