apps/base/riven/riven-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: riven-frontend-ingress
  annotations:
    gethomepage.dev/href: "https://riven.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Riven"
    gethomepage.dev/description: "Media management and streaming integrated with various media servers and third-party services"
    gethomepage.dev/app: riven
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/riven.svg"      
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`riven.hephaestus.markmk.com`) 
      kind: Rule
      services:
        - name: riven-frontend
          port: 3000
